force-app/main/default/objects/SIOC__SIOCSettings__c/SIOC__SIOCSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Provides ability to specify custom implementations for use with Factory classes.</description>
    <label>SIOC Settings</label>
</CustomObject>