force-app/main/default/objects/SIOC__SIOCSettings__c/fields/SIOC__DefaultResultFormat__c.field-meta.xml
<CustomField>
    <fullName>SIOC__DefaultResultFormat__c</fullName>
    <description>The Administrator populates this optional text field with the format string used to display the list of company search results. This is used only for the SIOC Default provider.</description>
    <label>Default Result List Format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>