force-app/main/default/objects/SIOC__SIOCSettings__c/fields/SIOC__DefaultSkipPortalSearch__c.field-meta.xml
<CustomField>
    <fullName>SIOC__DefaultSkipPortalSearch__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If this is false, the skip search button in BLUP portal will not be displayed to users using the default plugin. Default is true.</description>
    <label>Default Skip Portal Search</label>
    <type>Checkbox</type>
</CustomField>