force-app/main/default/objects/SIOC__SIOCSettings__c/fields/SIOC__DefaultStartSearchDelay__c.field-meta.xml
<CustomField>
    <fullName>SIOC__DefaultStartSearchDelay__c</fullName>
    <description>The Administrator populates this optional number field with the number of milliseconds the portal online app should wait between the user typing the business search input and the actual search being triggered.</description>
    <label>Default Start Search Delay</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>