force-app/main/default/objects/SIOC__SIOCSettings__c/fields/SIOC__LoggingProvider__c.field-meta.xml
<CustomField>
    <fullName>SIOC__LoggingProvider__c</fullName>
    <description>The Administrator populates this optional text field with the fully-qualified Apex class name of the Logging Provider class that implements the EFPIO.ILoggingProvider_v1 interface. If not set, the system uses the same logging provider set within the EFPIO Logging Settings.</description>
    <label>Logging Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>