force-app/main/default/objects/SIOC__SIOCSettings__c/fields/SIOC__UseDefaultCalloutProvider__c.field-meta.xml
<CustomField>
    <fullName>SIOC__UseDefaultCalloutProvider__c</fullName>
    <defaultValue>true</defaultValue>
    <description>The field is required. It indicates if Default Callout Provider should be an option when selecting a provider. This should be false when an implementing plugin is installed.</description>
    <label>Use Default Callout Provider</label>
    <type>Checkbox</type>
</CustomField>